add full screen

--- a/sample/src/main/res/values/pugnotification_strings.xml
+++ b/sample/src/main/res/values/pugnotification_strings.xml
@@ -10,6 +10,7 @@
     <string name="pugnotification_text_hint_bigtext">Big Text</string>
     <string name="pugnotification_text_hint_message">Insert Message</string>
     <string name="pugnotification_button_notify_simple">Notify Simple</string>
+    <string name="pugnotification_button_notify_full">Notify Full Screen</string>
     <string name="pugnotification_button_notify_custom">Notify Custom</string>
     <string name="pugnotification_text_summary">5 new messages</string>
 
