--- a/sample/src/main/res/layout/pugnotification_sample_activity.xml
+++ b/sample/src/main/res/layout/pugnotification_sample_activity.xml
@@ -15,10 +15,10 @@
             android:id="@+id/text_title_simple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_default"
             android:text="@string/pugnotification_text_notification"
             android:textColor="@android:color/black"
-            android:layout_marginBottom="@dimen/margin_default"
-            android:textSize="@dimen/textSize_large"/>
+            android:textSize="@dimen/textSize_large" />
 
         <RelativeLayout
             android:id="@+id/content_type"
@@ -29,19 +29,19 @@
                 android:id="@+id/text_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginTop="@dimen/margin_default"
                 android:text="@string/pugnotification_text_type"
-                android:layout_centerVertical="true"
-                android:textSize="@dimen/textSize_medium"/>
+                android:textSize="@dimen/textSize_medium" />
 
             <Spinner
                 android:id="@+id/spn_notification_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/margin_default"
                 android:layout_toEndOf="@+id/text_type"
                 android:layout_toRightOf="@+id/text_type"
-                android:layout_centerVertical="true"
                 android:textSize="@dimen/textSize_small"
                 />
         </RelativeLayout>
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_default"
                 android:text="@string/pugnotification_text_title"
-                android:textSize="@dimen/textSize_medium"/>
+                android:textSize="@dimen/textSize_medium" />
 
             <EditText
                 android:id="@+id/edt_title"
@@ -67,7 +67,7 @@
                 android:layout_toEndOf="@+id/text_title"
                 android:layout_toRightOf="@+id/text_title"
                 android:hint="@string/pugnotification_text_hint_title"
-                android:textSize="@dimen/textSize_small"/>
+                android:textSize="@dimen/textSize_small" />
 
 
         </RelativeLayout>
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_default"
                 android:text="@string/pugnotification_text_message"
-                android:textSize="@dimen/textSize_medium"/>
+                android:textSize="@dimen/textSize_medium" />
 
             <EditText
                 android:id="@+id/edt_message"
@@ -95,7 +95,7 @@
                 android:layout_toEndOf="@+id/text_message"
                 android:layout_toRightOf="@+id/text_message"
                 android:hint="@string/pugnotification_text_hint_message"
-                android:textSize="@dimen/textSize_small"/>
+                android:textSize="@dimen/textSize_small" />
         </RelativeLayout>
 
 
@@ -111,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_default"
                 android:text="@string/pugnotification_text_bigtext"
-                android:textSize="@dimen/textSize_medium"/>
+                android:textSize="@dimen/textSize_medium" />
 
             <EditText
                 android:id="@+id/edt_bigtext"
@@ -121,7 +121,7 @@
                 android:layout_toEndOf="@+id/text_bigtext"
                 android:layout_toRightOf="@+id/text_bigtext"
                 android:hint="@string/pugnotification_text_hint_bigtext"
-                android:textSize="@dimen/textSize_small"/>
+                android:textSize="@dimen/textSize_small" />
         </RelativeLayout>
 
 
@@ -129,7 +129,14 @@
             android:id="@+id/btn_notify_simple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pugnotification_button_notify_simple"/>
+            android:text="@string/pugnotification_button_notify_simple" />
+
+        <Button
+            android:id="@+id/btn_notify_full_screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pugnotification_button_notify_full"
+            android:textAllCaps="false" />
 
         <TextView
             android:id="@+id/text_title_custom"
@@ -138,7 +145,7 @@
             android:layout_marginTop="@dimen/margin_middle"
             android:text="@string/pugnotification_text_notification_custom"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/textSize_large"/>
+            android:textSize="@dimen/textSize_large" />
 
 
         <RelativeLayout
@@ -152,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_default"
                 android:text="@string/pugnotification_text_url"
-                android:textSize="@dimen/textSize_medium"/>
+                android:textSize="@dimen/textSize_medium" />
 
             <EditText
                 android:id="@+id/edt_url"
@@ -162,13 +169,13 @@
                 android:layout_toEndOf="@+id/text_url"
                 android:layout_toRightOf="@+id/text_url"
                 android:hint="@string/pugnotification_text_hint_url"
-                android:textSize="@dimen/textSize_small"/>
+                android:textSize="@dimen/textSize_small" />
         </RelativeLayout>
 
         <Button
             android:id="@+id/btn_notify_custom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pugnotification_button_notify_custom"/>
+            android:text="@string/pugnotification_button_notify_custom" />
     </LinearLayout>
 </ScrollView>
